--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
     "nodemailer": "^7.0.11",
     "yet-another-react-lightbox": "^3.25.0"
