--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,8 @@
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "stripe": "^20.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
