--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^4.3.1",
+    "@stripe/react-stripe-js": "^5.6.0",
+    "@stripe/stripe-js": "^8.7.0",
     "buffer": "^6.0.3",
     "framer-motion": "^12.23.24",
     "react": "^19.0.0",
